# catkin_ws

./: .ycm_extra_conf.py
devel/: .catkin  .rosinstall  setup.sh
devel/include/action_tutorial/: DoDishesAction.h  DoDishesActionFeedback.h  DoDishesActionGoal.h  DoDishesActionResult.h  DoDishesFeedback.h  DoDishesGoal.h  DoDishesResult.h
devel/include/action_tutorials/: DoDishesAction.h  DoDishesActionFeedback.h  DoDishesActionGoal.h  DoDishesActionResult.h  DoDishesFeedback.h  DoDishesGoal.h  DoDishesResult.h
devel/include/dynamic_tutorials/: TutorialsConfig.h
devel/include/learning_communication/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Person.h
devel/lib/action_tutorial/: DoDishe_client  DoDishe_server
devel/lib/action_tutorials/: DoDishes_client  DoDishes_server
devel/lib/dynamic_tutorials/: dynamic_reconfigure_node
devel/lib/learning_communication/: client  listener  server  talker
devel/lib/learning_tf/: turtle_tf_broadcaster  (+1 more)
mrx_t4_a00_new_moveit_config_backup/: .setup_assistant  CMakeLists.txt  package.xml
mrx_t4_a00_new_moveit_config_backup/config/: kinematics.yaml  mrx_t4_a00_new.srdf
mrx_t4_a00_new_moveit_config_backup/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  planning_pipeline.launch.xml  run_benchmark_ompl.launch
src/: solver_config
src/action_tutorial/: CMakeLists.txt  package.xml
src/kuca/: CMakeLists.txt  package.xml
src/kuca_simple_moveit_config/: .setup_assistant  CMakeLists.txt
src/mrx_t4_a00_new/: CMakeLists.txt  urdf.rviz
src/mrx_t4_a00_new/config/: arbotix_arm.yaml  arm_gazebo_joint_states.yaml  gazebo.rviz  gazebo_arm_control.yaml  joint_names_mrx_t4_a00_new.yaml  pick_and_place.rviz  trajectory_control.yaml
src/mrx_t4_a00_new/launch/: arbotix_arm_panning.launch  arbotix_mrx_t4_a00_new.launch  arm_bringup_moveit.launch  arm_gazebo_control.launch  arm_gazebo_controller.launch  arm_gazebo_states.launch  arm_trajectory_controller.launch  arm_world.launch  display.launch  display_with_kinect.launch  gazebo.launch  view_mrx_t4_a00_new_gazebo.launch  view_mrx_t4_a00_new_with_kinect_gazebo.launch
src/mrx_t4_a00_new/meshes/: armA.STL  armB.STL  armC.STL  base.STL  base__.STL
src/mrx_t4_a00_new/scripts/: .line2.py.swp  calFixPosMatr.py  ik.py  line.py  line2.py  lineConstraint.py  line_new.py  markerpub.py  moveit_cartesian_demo.py  moveit_circle.py  moveit_constraints_demo.py  moveit_obstacles_demo.py  task.py  test.py  trajectory_action.py  trajectory_in.py  trajectory_output.py
src/mrx_t4_a00_new/src/: transform.cpp
src/mrx_t4_a00_new/urdf/: kinect.xacro  mrx_t4_a00_new.gazebo  mrx_t4_a00_new.urdf  mrx_t4_a00_new_backup.urdf  mrx_t4_a00_new_gazebo.urdf  mrx_t4_a00_new_gazebo.xacro  mrx_t4_a00_new_with_kinect_gazebo.xacro
src/mrx_t4_a00_new_moveit_config/: .setup_assistant
src/mrx_t4_arm_kinematics/: CMakeLists.txt
src/mrx_t4_arm_kinematics/include/mrx_t4_arm_kinematics/: inverse_kinematics.h  logger.h
src/mrx_t4_arm_kinematics/src/: .inverse_kinematics.cpp.swp  inverse_kinematics.cpp  logger.cpp  test_kdl.cpp
src/mrx_t4_arm_kinematics/test/: inverse_kinematics_test.cpp
src/mrx_t4_arm_kinematics_moveit/: CMakeLists.txt  plugins.xml
src/mrx_t4_arm_kinematics_moveit/include/mrx_t4_arm_kinematics_moveit/: configuration_comparator.h  configuration_comparator.inl  kinematics_logger.h  mrx_t4_arm_kinematics_moveit.h
src/mrx_t4_arm_kinematics_moveit/src/: kinematics_logger.cpp  mrx_t4_arm_kinematics_moveit.cpp
src/mrx_t4_arm_kinematics_moveit/test/: configuration_comparator_test.cpp  load_moveit_plugin_test.cpp  moveit_plugin.test  mrx_t4_arm_kinematics_moveit_test.cpp
src/my_pcl_tutorial/: CMakeLists.txt  package.xml
src/plugin_tutorial/: CMakeLists.txt
(+231 files in other folders)
